--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-pkg/
+# Gem related stuff
+*.gem
+/pkg
+/.bundle
+/Gemfile.lock
+/vendor
+
+# RBX stuff
+/.rbx/
+
+# Editor temp/backup files
+*~
+.*.sw?
+
+# General
+/nbproject
+.DS_Store
+/.rvmrc
+/.yardoc
+/doc
+/tmp
